--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 /* Page Header, Instruction Button */
-#instruction {
+#btn-instruction {
     position: absolute;
     top: 0;
     letter-spacing: 2px;
@@ -58,4 +58,10 @@ body {
     line-height: 75px;
     right: 30px;
     padding: 0 5px 0 5px;
+}
+
+/* Page Header, Action on Instruction Button when Hover */
+#btn-instruction:hover {
+    background-color: #5a5a5a;
+    color: #fff;
 }
