--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,9 @@ body {
 /* Footer, Initial Background Color - All Papges */
 #footer {
     background-color: #fff;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
 
 /* Page Footer, Contact Section */
@@ -105,6 +108,11 @@ body {
     order: 3;
     color: #fff;
     background-color: #2f2f2f;
+}
+
+/* Page Footer, Social Network List */
+.social-networks ul {
+    height: 60px;
 }
 
 /* Page Footer, Social Network Items */
