--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,22 @@ body {
     color: #fff;
 }
 
+/* Main Section - Game Title */
+#game-title {
+    margin-top: 20px;
+    height: 50px;
+    text-align: center;
+}
+
+/* Main Section - Game Area */
+#game-area {
+    width: 75%;
+    margin: 10px auto 20px auto;
+    text-align: center;
+    height: 74vh;
+    background-color: #b9b9b9;
+}
+
 /* Footer, Initial Background Color - All Papges */
 #footer {
     background-color: #fff;
