--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,6 +153,80 @@ body {
     font-size: xx-large;
 }
 
+/* Message Modal - background */
+/* Hidden by default and place on top */
+.msg-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    text-align: left;
+  }
+  
+  /* Message Modal - Content */
+  .msg-modal-content {
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 1px;
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+  }
+  
+  /* Message Modal - Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  
+  /* Message Modal - Animation */
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+  
+  /* Message Modal - The Close Button */
+  .msg-modal-close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  /* Message Modal - The Close Button */
+  .msg-modal-close:hover,
+  .msg-modal-close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  /* Message Modal - Header */
+  .msg-modal-header {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+  }
+  
+  /* Message Modal - Body */
+  .msg-modal-body {
+    padding: 2px 16px;
+    margin-left: 10%;
+    text-align: center;  
+  }
+
 /* Footer, Initial Background Color - All Papges */
 #footer {
     background-color: #fff;
