--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,9 +371,10 @@ input {
 
     /* Main Section - Reduce all button size */
     .btn {
-        width: 160px;
+        width: 150px;
         height: 50px;
         margin: 10px 0;
+        border-radius: 15px;
     }
 
     /* Main Section - Reduce buttons size for Submit and Next */
