--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,8 +169,9 @@ input {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    height: 40%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
     text-align: left;
   }
   
