maint: Update mediaquery for manual titles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,6 +512,11 @@ input {
         font-size: 120%;
     }
 
+    /* Home Page - Reduce title font size */
+    .manual-title {
+        font-size: 120%;
+    }
+
 }
 /* Media Query Below 550 End
 
