feat: Add basic style to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,33 @@ input {
 }
 
 /** Styles for All Pages - START **/
+/* All Page Header, set background */
+.page-header {
+    overflow: hidden;
+    background-color: #2f2f2f;
+    position: relative;
+}
+
+/* All Page Header, set <a> tag properties */
+.page-header a {
+    color: white;
+    height: 75px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+}
+
+/* All Page Header, set menu icon properties */
+.page-header a.icon {
+    background: #2f2f2f;
+    width:30px;
+    text-align: center;
+    height: 34px;
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
 
 /* All Page Header, Company Name */
 #company {
@@ -26,6 +53,7 @@ input {
     float: left;
     font-size: x-large;
     line-height: 75px;
+    margin-left: 42px;
 }
 
 /* All Page Header, Logo Image */
