--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,32 +45,34 @@ input {
     position: absolute;
     left: 0;
     top: 0;
+    border: 0;
+    border-right: 1px solid #b9b9b9;
 }
 
 /* All Page Header, hide menu initially */
 .page-header #myLinks {
+    background: black;
     display: none;
 }
 
 /* All Page Header, set menu <a> tag properties */
 .topnav a {
-      height: 35px;
-      padding: 25px 0 15px 10px;
-      text-decoration: none;
-      font-weight: 600;
+    height: 35px;
+    padding: 25px 5px 15px 10px;
+    text-decoration: none;
+    font-weight: 600;
+    border-top: 1px solid #b9b9b9;
 }
 
 /* All Page Header, set menu <a> tag hover properties */
 .topnav a:hover {
-    background-color: #5a5a5a;
-    outline: 1px solid #b9b9b9;
+    background-color: #5f5f5f;
     color: black;
 }
 
 /* All Page Header, set menu item active properties */
 .topnav a.active {
-      background-color: #5a5a5a;
-      color: black;
+    color: #9f9f9f;
 }
 
 /* All Page Header, Company Name */
@@ -79,7 +81,7 @@ input {
     float: left;
     font-size: x-large;
     line-height: 75px;
-    margin-left: 42px;
+    margin-left: 52px;
 }
 
 /* All Page Header, Logo Image */
